--- a/template/index.html
+++ b/template/index.html
@@ -1,12 +1,91 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    
-        <title>Index</title>
-        
+        <link rel="stylesheet" href="{{server_addr}}static/lib/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
+
+        <link rel="stylesheet" href="{{server_addr}}static/lib/bootstrap/css/bootstrap-theme.min.css" type="text/css" media="screen" charset="utf-8">
+
+        <script type="text/javascript" charset="utf-8" src="{{server_addr}}static/lib/bootstrap/js/bootstrap.min.js"></script>
+        <title>FACEFUCK DATING SITE</title>
+        <style type="text/css" media="screen">
+            body{
+                align : center;
+            }
+            #center{ 
+                MARGIN-RIGHT: auto;
+                MARGIN-LEFT: auto;
+                height:200px;
+                background:#F00;
+                width:400px;
+                vertical-align:middle;
+                line-height:200px;
+            }
+        </style>        
     </head>
+    
     <body>
-    <a href= "">{{username}}</a>
-                {{age}}
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">FACEFUCK DATING SITE</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="{{server_addr}}love2041.cgi">HOME</a></li>
+                        <li><a href="{{}}">LOGIN</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search" name="name" action="{{server_addr}}person_search.cgi" method="get">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search" name="name">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+        
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Link</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    {{content}}
+     <div id="pager">
+        <ul class="pagination">
+            <li><a href="#">&laquo;</a></li>
+            <li><a href="{{server_addr}}love2041.cgi?page={{page_up}}">page up</a></li>
+            <li><a href="{{server_addr}}love2041.cgi?page={{page_down}}">pge down</a></li>
+            <li><a href="#">&raquo;</a></li>
+        </ul>
+    </div>
     </body>
 </html>
