--- a/template/search_info.html
+++ b/template/search_info.html
@@ -7,7 +7,20 @@
 
         <script type="text/javascript" charset="utf-8" src="{{server_addr}}static/lib/bootstrap/js/bootstrap.min.js"></script>
         <title>FACEFUCK DATING SITE</title>
-        
+        <style type="text/css" media="screen">
+            body{
+                align : center;
+            }
+            #center{ 
+                MARGIN-RIGHT: auto;
+                MARGIN-LEFT: auto;
+                height:200px;
+                background:#F00;
+                width:400px;
+                vertical-align:middle;
+                line-height:200px;
+            }
+        </style>        
     </head>
     
     <body>
@@ -27,7 +40,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">HOME</a></li>
+                        <li class="active"><a href="{{server_addr}}love2041.cgi">HOME</a></li>
                         <li><a href="#">LOGIN</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -63,24 +76,11 @@
                         </li>
                     </ul>
             </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-        
-        <div id="{{name}}">
-            <img src="{{photo}}"/>
-            </br>
-            <a href= "{{server_addr}}person_info.cgi?username={{username}}">{{name}}</a>
-            </br>
-            gender : {{gender}}
-            </br>
-            hair color :{{hair_colour}}
-            </br>
-            height : {{height}}
-            </br>
-        </div>
-         <div id="pager">
-             <a href="{{server_addr}}love2041.cgi?page={{up_page}}">page up</a> <a href="{{server_addr}}love2041.cgi?page={{down_page}}">page down</a>
-         </div>
-
-    </body>
+            </div><!-- /.container-fluid -->
+        </nav>
+        {{content}}
+  </body>
 </html>
+
+
+
